WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309987
REGRESSION(
309205@main
): ASSERTION FAILED: threadLikeAssertion.isCurrent() for inspector/timeline/timeline-event-EventDispatch.html
https://bugs.webkit.org/show_bug.cgi?id=309987
Summary
REGRESSION(309205@main): ASSERTION FAILED: threadLikeAssertion.isCurrent() fo...
Fujii Hironori
Reported
2026-03-15 12:43:44 PDT
Some inspector/timeline/timeline-event-*.html tests are randomly crash, timeout and pass. History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=inspector%2Ftimeline%2Ftimeline-event-TimerFire.html&test=inspector%2Ftimeline%2Ftimeline-event-EventDispatch.html&test=inspector%2Ftimeline%2Ftimeline-event-TimerRemove.html&style=debug
Regressions: Unexpected crashes inspector/timeline/timeline-event-EventDispatch.html [ Crash ] inspector/timeline/timeline-event-TimerFire.html [ Crash ] inspector/timeline/timeline-event-TimerRemove.html [ Crash ] VM 0x7fd669400000 on pid 1497220 received NeedDebuggerBreak trap ASSERTION FAILED: threadLikeAssertion.isCurrent() WTF/Headers/wtf/ThreadAssertions.h(163) : void WTF::assertIsCurrent(const ThreadLikeAssertion&) resource:///org/webkit/inspector/UserInterface/TestCombined.js:57308:27: CONSOLE ASSERT ERROR 1 0x7fd6922507d0 WTF::assertIsCurrent(WTF::ThreadLikeAssertion const&) 2 0x7fd692254e23 WTF::RefCountDebuggerImpl<(WTF::RefCountIsThreadSafe)0>::applyRefDerefThreadingCheck(unsigned int) const 3 0x7fd69229af6a WTF::RefCountDebuggerImpl<(WTF::RefCountIsThreadSafe)0>::willRef(unsigned int) const 4 0x7fd692289574 WTF::RefCountedBase::ref() const 5 0x7fd693c08794 WTF::RefCountedAndCanMakeWeakPtr<WebCore::CachedResource>::ref() const 6 0x7fd6953ac411 WTF::DefaultRefDerefTraits<WebCore::CachedScript>::refIfNotNull(WebCore::CachedScript*) 7 0x7fd6953abbd6 WTF::RefPtr<WebCore::CachedScript, WTF::RawPtrTraits<WebCore::CachedScript>, WTF::DefaultRefDerefTraits<WebCore::CachedScript> >::RefPtr(WebCore::CachedScript*) 8 0x7fd6953abae4 WTF::RefPtr<WebCore::CachedScript, WTF::RawPtrTraits<WebCore::CachedScript>, WTF::DefaultRefDerefTraits<WebCore::CachedScript> > WTF::protect<WebCore::CachedScript>(WebCore::CachedResourceHandle<WebCore::CachedScript> const&) 9 0x7fd6953aaafd WebCore::CachedScriptSourceProvider::codeBlockHashConcurrently(int, int, JSC::CodeSpecializationKind) 10 0x7fd67fa867c8 JSC::CodeBlock::hash() const 11 0x7fd6817d9b26 operator() 12 0x7fd6817d9c71 operator() 13 0x7fd6817da856 operator() 14 0x7fd6817dafbf JSC::SamplingProfiler::processUnverifiedStackTraces() 15 0x7fd6809e24bd visitSamplingProfiler<JSC::SlotVisitor> 16 0x7fd6809ded39 operator()<JSC::SlotVisitor> 17 0x7fd6809dedee call 18 0x7fd680a79348 WTF::Function<void (JSC::SlotVisitor&)>::operator()(JSC::SlotVisitor&) const 19 0x7fd680a6d09b JSC::MarkingConstraintExecutorPair::execute(JSC::SlotVisitor&) 20 0x7fd680a793ab void JSC::SimpleMarkingConstraint::executeImplImpl<JSC::SlotVisitor>(JSC::SlotVisitor&) 21 0x7fd680a6d2c1 JSC::SimpleMarkingConstraint::executeImpl(JSC::SlotVisitor&) 22 0x7fd680a5004c JSC::MarkingConstraint::execute(JSC::SlotVisitor&) 23 0x7fd680a51f10 JSC::MarkingConstraintSolver::runExecutionThread(JSC::SlotVisitor&, JSC::MarkingConstraintSolver::SchedulerPreference, WTF::ScopedLambda<std::optional<unsigned int> ()>) 24 0x7fd680a510d3 operator() 25 0x7fd680a6babc run 26 0x7fd680a6f8dc JSC::SlotVisitor::drainFromShared(JSC::SlotVisitor::SharedDrainMode, WTF::MonotonicTime) 27 0x7fd680975009 operator() 28 0x7fd6809dde94 run 29 0x7fd682063feb WTF::ParallelHelperClient::runTask(WTF::RefPtr<WTF::SharedTask<void ()>, WTF::RawPtrTraits<WTF::SharedTask<void ()> >, WTF::DefaultRefDerefTraits<WTF::SharedTask<void ()> > > const&) 30 0x7fd682064ae1 WTF::ParallelHelperPool::Thread::work() 31 0x7fd681fd74fc operator() WebKitWebProcess terminated (pid 1497220) for reason: crash
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-03-15 12:43:53 PDT
mac-wk2 already has the following flaky marker for
bug#266591
. #
rdar://119828743
(REGRESSION (
263917@main
?): [ Sonoma Debug wk2 x86_64 ] 3 tests in inspector/timeline are flaky crash with ASSERTION FAILED in void WebCore::InspectorTimelineAgent::didCompleteCurrentRecord(TimelineRecordType) [ Sonoma+ Debug x86_64 ] inspector/timeline/timeline-event-TimerInstall.html [ Pass Crash ] [ Sonoma+ Debug x86_64 ] inspector/timeline/timeline-event-TimerRemove.html [ Pass Crash ] [ Sonoma+ Debug x86_64 ] inspector/timeline/timeline-event-TimerFire.html [ Pass Crash ]
Fujii Hironori
Comment 2
2026-03-15 12:45:16 PDT
History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=inspector%2Ftimeline%2Ftimeline-event-TimerInstall.html&test=inspector%2Ftimeline%2Ftimeline-event-TimerFire.html&test=inspector%2Ftimeline%2Ftimeline-event-EventDispatch.html&test=inspector%2Ftimeline%2Ftimeline-event-TimerRemove.html&style=debug
Fujii Hironori
Comment 3
2026-03-15 20:24:23 PDT
309205@main
added protect() in CachedScriptSourceProvider::codeBlockHashConcurrently. I confirmed removing it makes the test pass
Chris Dumez
Comment 4
2026-03-15 20:42:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60673
EWS
Comment 5
2026-03-15 22:59:41 PDT
Committed
309306@main
(d26aa5ff40f5): <
https://commits.webkit.org/309306@main
> Reviewed commits have been landed. Closing PR #60673 and removing active labels.
Radar WebKit Bug Importer
Comment 6
2026-03-15 23:00:15 PDT
<
rdar://problem/172638103
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug