REGRESSION(309205@main): ASSERTION FAILED: threadLikeAssertion.isCurrent() for inspector/timeline/timeline-event-EventDispatch.html https://bugs.webkit.org/show_bug.cgi?id=309987

Reviewed by Fujii Hironori.

309205@main mistakenly added a `protect()` call in a function that gets
called on the GC thread. To address the issue, stop calling `protect()`
and suppress the safer cpp warning instead, with a code comment
explaining the reason.

* Source/WebCore/bindings/js/CachedScriptSourceProvider.h:

Canonical link: https://commits.webkit.org/309306@main